2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h.m4:
	* src/xcbext.h:
	* src/client-c.xcb:
	* src/xcb_ext.c:
	Update the extension cache for its new API. The
	optimizations that this API enables are not yet
	implemented, but the current implementation should
	at least function correctly.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_util.c:
	* src/xcbext.h:
	Oops, XCBPopcount was supposed to change argument
	types too.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/client-c.xcb:
	* src/xcb_util.c:
	* src/xcbext.h:
	Renamed XCBOnes to XCBPopcount as per new API spec.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/xcbext.h:
	* src/xcb.h.m4:
	* src/Makefile.am:
	* src/client-c.xcb:
	* src/xcb_in.c:
	* src/xcb_out.c:
	* src/xcb_util.c:
	* src/xcb_xid.c:
	Moved declarations that are only useful to protocol
	implementations into a separate header file,
	xcbext.h.

2004-09-28  Jamey Sharp  <jamey@minilop.net>

	* src/xcbint.h:
	* src/xcb_conn.c:
	Add internal sanity check macros for sequence
	numbers, and invoke them every time _xcb_conn_wait
	is entered.

2004-09-28  Jamey Sharp  <jamey@minilop.net>

	* src/client-c.xcb:
	Allow LISTPARAMs to omit the length argument. When
	generating C code, a LOCALPARAM is automatically
	generated for the length if the length argument is
	omitted.

2004-08-13  Jamey Sharp  <jamey@minilop.net>

	* configure.ac:
	* src/Makefile.am:
	* src/.cvsignore:
	* src/check_all.c:
	* src/check_suites.h:
	* src/check_public.c:
	Add the first unit tests for XCB. This adds a build
	dependency on 'check'; I hope somebody will make it
	more of a build recommendation.

2004-08-13  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_conn.c:
	Add a sanity check: assert() that _xcb_conn_wait
	will not be re-entered within the same thread. This
	turns out not to be true in some current buggy code.
	Xlib re-enters from _XAsyncReplyHandler in
	src/xcl/display.c; and the X Test Suite seems to
	catch SIGABRT and continue running.
