@@ -81,6 +81,7 @@ int XCBFlush(XCBConnection *c);
 /* xcb_in.c */
 
 XCBGenericEvent *XCBWaitEvent(XCBConnection *c);
+XCBGenericEvent *XCBPollForEvent(XCBConnection *c, int *error);
 
 int XCBEventQueueLength(XCBConnection *c);
 void XCBEventQueueClear(XCBConnection *c);
